# api_for_library_management

./: .env.sample  .flake8  Dockerfile  README.md  author_fixture.json  books_fixture.json  docker-compose.yml  pyproject.toml
author/: admin.py  models.py  serializers.py  urls.py  views.py
author/migrations/: 0001_initial.py
books/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
books/migrations/: 0001_initial.py  0002_remove_genre_category_delete_category.py  0003_book_is_available_alter_book_genre_rentbooks.py  0004_rename_user_rentbooks_reader.py  0005_alter_rentbooks_return_date.py  0006_book_available_quantity.py  0007_remove_rentbooks_term_rentbooks_deadline.py  0008_rename_reader_rentbooks_user.py
config/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_and_more.py
